# OpenGL_Sphere3D

./: .gitignore  .gitmodules  CMakeLists.txt  ElementBufferObject.cpp  ElementBufferObject.h  GeometryPrimitives.cpp  GeometryPrimitives.h  Icosahedron.cpp  Icosahedron.h  MainWindow.cpp  MainWindow.h  MemoryProfiler.cpp  MemoryProfiler.h  OpenGLMain.cpp  README.md  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h  default.frag  default.vert  macro.h
.github/workflows/: build_windows.yml
libs/: CMakeLists.txt
libs/ImGuiFileDialog/: CMakeLists.txt
libs/ImGuizmo/: CMakeLists.txt
libs/assimp/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/gtest/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/stb/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  ElementBufferObject.cpp  ElementBufferObject.hpp  Icosahedron.cpp  Icosahedron.hpp  MainWindow.cpp  MainWindow.hpp  MemoryProfiler.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OpenGLMain.cpp  SceneRenderer.cpp  SceneRenderer.hpp  Shader.cpp  Shader.hpp  UserInputHandler.cpp  UserInputHandler.hpp  Vertex.cpp  Vertex.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp
src/core/: Camera.cpp  Camera.hpp  Cubemap.cpp  Cubemap.hpp  CursorHandler.cpp  CursorHandler.hpp  CursorPositionHandler.cpp  CursorPositionHandler.hpp  Debug.hpp  ElementBufferObject.cpp  ElementBufferObject.hpp  Event.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  FramesCounter.cpp  FramesCounter.hpp  GPUBuffers.cpp  GPUBuffers.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  MainWindow.cpp  MainWindow.hpp  MemoryProfiler.cpp  MemoryProfiler.hpp  ModelLoader.cpp  ModelLoader.hpp  MouseInputHandler.cpp  MouseInputHandler.hpp  OpenGLMain.cpp  OpenGLObject.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Shader.cpp  Shader.hpp  ShaderStorage.cpp  ShaderStorage.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  (+9 more)
src/ge/: BezierCurve.cpp  BezierCurve.hpp  BoundingBox.cpp  BoundingBox.hpp  ComplexModel.hpp  Cube.cpp  Cube.hpp  Curve.hpp  Face.cpp  Face.hpp  IDrawable.hpp  IShaderable.hpp  Icosahedron.cpp  Icosahedron.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object3D.cpp  Object3D.hpp  Plane.hpp  Polyline.cpp  Polyline.hpp  Pyramid.cpp  Pyramid.hpp  Ray.cpp  Ray.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp
src/glsl/: fbo_default_shader.frag  fbo_default_shader.vert  fragment_shader  lines.frag  lines.vert  outlining.frag  outlining.vert  picking_fbo.frag  picking_fbo.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
src/utils/: Constants.hpp  IObserver.hpp  Macro.hpp  Singleton.hpp
tests/: CMakeLists.txt  EventHandlerTests.cpp
