add_subdirectory(glad)
add_subdirectory(assimp)
add_subdirectory(glfw)
add_subdirectory(glm)
add_subdirectory(ImGuiFileDialog)
add_subdirectory(gtest)


# These are without CMakeLists file, so need to configure them manually later. Here only fetch them
add_subdirectory(ImGuizmo)
add_subdirectory(imgui)
add_subdirectory(stb)
